ContactForm: Formspree連携実装と成功メッセージ更新

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+
 
